# semantic-file-organizer

./: .agent_task.json  .gitignore  History.md  IMPLEMENTATION.md  README.md  ToDo.md  pyproject.toml  test_config.json
Developmen_Steps/: CodingTask001.md  CodingTask002.md  files2json.py
examples/: example_config.json  example_usage.py  full_demo.py
scanner/: scanner.py
semantic_file_organizer/annotation/: annotator.py
semantic_file_organizer/cli/: cli.py
semantic_file_organizer/decision/: decision.py
semantic_file_organizer/executor/: executor.py
semantic_file_organizer/models/: __init__.py  file_models.py
semantic_file_organizer/planner/: planner.py
semantic_file_organizer/scanner/: scanner.py
semantic_organizer/: __init__.py  annotator.py  cli.py  decision.py  executor.py  models.py  pipeline.py  planner.py  scanner.py  storage.py
tests/: test_pipeline.py  test_update_history.py
tools/: update_history.py
